--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.58"
+tokio = { version = "1.20.0", features = ["full"] }
+tokio-i3ipc = "0.15.0"
+tokio-stream = "0.1.9"
