--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,10 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.58"
+ctrlc = "3.2.2"
+stopper = "0.2.0"
 tokio = { version = "1.20.0", features = ["full"] }
-tokio-i3ipc = "0.15.0"
+tokio-i3ipc = { git = "https://github.com/skystar-p/tokio-i3ipc", branch = "master", features = ["sway"] }
 tokio-stream = "0.1.9"
+tracing = "0.1.35"
+tracing-subscriber = "0.3.14"
